--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -36,13 +36,38 @@ body {
   height: 40px;
 }
 
+@media screen and (max-width: 756px) {
+  .navbar .navbar-cont .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(10%, 0);
+  }
+}
+
 .navbar .navbar-cont .menu-icon {
   display: none;
+}
+
+@media screen and (max-width: 756px) {
+  .navbar .navbar-cont .menu-icon {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    font-size: 1.8rem;
+    z-index: 2;
+    cursor: pointer;
+  }
 }
 
 .navbar .navbar-cont .menu-icon .fa-bars,
 .navbar .navbar-cont .menu-icon .fa-times {
   color: #1b262f;
+}
+
+.navbar .navbar-cont .menu-icon .fa-times {
+  color: #fbfcfe;
 }
 
 .navbar .navbar-cont .nav-menu {
@@ -54,6 +79,38 @@ body {
   justify-content: start;
   margin-left: 80px;
   align-items: center;
+}
+
+@media screen and (max-width: 756px) {
+  .navbar .navbar-cont .nav-menu {
+    display: flex;
+    flex-direction: column;
+    padding-top: 7%;
+    width: 80%;
+    height: 100%;
+    position: absolute;
+    left: 100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+  }
+  .navbar .navbar-cont .nav-menu.active {
+    background-color: #1b262f;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+  .navbar .navbar-cont .nav-menu.active .nav-links {
+    font-size: 22px;
+    color: #6c8294;
+  }
+  .navbar .navbar-cont .nav-menu.active .nav-links:hover {
+    cursor: pointer;
+    color: #fbfcfe;
+  }
+  .navbar .navbar-cont .nav-menu.active li:first-child {
+    margin-top: 70px;
+  }
 }
 
 .navbar .navbar-cont .nav-menu .nav-links {
@@ -77,7 +134,7 @@ body {
   cursor: pointer;
 }
 
-.navbar .navbar-cont .pink-btn {
+.navbar .navbar-cont .nav-menu .pink-btn {
   height: 50px;
   width: 150px;
   border-radius: 25px;
@@ -88,14 +145,21 @@ body {
 }
 
 @media screen and (min-width: 756px) {
-  .navbar .navbar-cont .pink-btn {
+  .navbar .navbar-cont .nav-menu .pink-btn {
     position: absolute;
     right: 20px;
     top: 20px;
   }
 }
 
-.navbar .navbar-cont .pink-btn:hover {
+@media screen and (max-width: 756px) {
+  .navbar .navbar-cont .nav-menu .pink-btn {
+    width: 80%;
+    font-size: 16px;
+  }
+}
+
+.navbar .navbar-cont .nav-menu .pink-btn:hover {
   transition: all 0.2s ease-out;
   border-color: #da6d97;
   background-color: #da6d97;
