--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -10,15 +10,15 @@ $h1-small: 56px;
 $h2-size: 48px;
 $h3-big: 32px;
 $h3-small: 20px;
-$h4-size:25px;
+$h4-size: 25px;
 //--------------font families-----------
 $DM-serif: 'DM Serif Display',
 serif;
 $public-sans: 'Public Sans',
 sans-serif;
 //--------------font weights-------------
-$regular:400;
-$light:300;
+$regular: 400;
+$light: 300;
 //
 * {
     box-sizing: border-box;
@@ -52,12 +52,30 @@ body {
                 align-self: start !important;
                 height: 40px;
             }
+            @media screen and (max-width: 756px) {
+                position: absolute;
+                top: 0;
+                left: 0;
+                transform: translate(10%, 0);
+            }
         }
         .menu-icon {
             display: none;
+            @media screen and (max-width: 756px) {
+                display: block;
+                position: absolute;
+                top: 30px;
+                right: 40px;
+                font-size: 1.8rem;
+                z-index: 2;
+                cursor: pointer;
+            }
             .fa-bars,
             .fa-times {
                 color: $mirage-blue;
+            }
+            .fa-times {
+                color: $link-water-white;
             }
         }
         .nav-menu {
@@ -69,6 +87,37 @@ body {
             justify-content: start;
             margin-left: 80px;
             align-items: center;
+            @media screen and (max-width: 756px) {
+                display: flex;
+                flex-direction: column;
+                padding-top: 7%;
+                width: 80%;
+                height: 100%;
+                position: absolute;
+                left: 100%;
+                opacity: 0;
+                transition: all 0.5s ease;
+                &.active {
+                    background-color: $mirage-blue;
+                    left: 0;
+                    opacity: 1;
+                    transition: all 0.5s ease;
+                    z-index: 1;
+                    .nav-links {
+                        font-size: 22px;
+                        color: $light-san-juan-blue;
+                        &:hover {
+                            cursor: pointer;
+                            color: $link-water-white;
+                        }
+                    }
+                    li {
+                        &:first-child {
+                            margin-top: 70px;
+                        }
+                    }
+                }
+            }
             .nav-links {
                 text-decoration: none;
                 display: flex;
@@ -88,24 +137,28 @@ body {
                     }
                 }
             }
-        }
-        .pink-btn {
-            @media screen and (min-width: 756px) {
-                position: absolute;
-                right: 20px;
-                top: 20px;
-            }
-            height: 50px;
-            width: 150px;
-            border-radius: 25px;
-            cursor: pointer;
-            border:1px solid $dark-red;
-            background-color: $dark-red;
-            color:$link-water-white;
-            &:hover {
-                transition: all 0.2s ease-out;
-                border-color: $charm-pink;
-                background-color: $charm-pink;
+            .pink-btn {
+                @media screen and (min-width: 756px) {
+                    position: absolute;
+                    right: 20px;
+                    top: 20px;
+                }
+                height: 50px;
+                width: 150px;
+                border-radius: 25px;
+                @media screen and (max-width:756px) {
+                    width: 80%;
+                    font-size: 16px;
+                }
+                cursor: pointer;
+                border: 1px solid $dark-red;
+                background-color: $dark-red;
+                color: $link-water-white;
+                &:hover {
+                    transition: all 0.2s ease-out;
+                    border-color: $charm-pink;
+                    background-color: $charm-pink;
+                }
             }
         }
     }
