--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -331,3 +331,53 @@ body {
   cursor: pointer;
   transform: scale(1.05) !important;
 }
+
+.middle-cont {
+  padding: 5% 10%;
+}
+
+@media screen and (min-width: 755px) {
+  .middle-cont .card-row.reverse {
+    flex-direction: row-reverse;
+  }
+}
+
+@media screen and (max-width: 756px) {
+  .middle-cont .card-row {
+    flex-direction: column-reverse;
+  }
+}
+
+@media screen and (min-width: 755px) {
+  .middle-cont .card-row .text-col {
+    margin: auto 0;
+  }
+}
+
+.middle-cont .card-row .text-col h2 {
+  font-size: 48px;
+  font-family: "Public Sans", sans-serif;
+  margin-bottom: 20px;
+}
+
+.middle-cont .card-row .text-col p {
+  font-size: 15px;
+  line-height: 1.5rem;
+  font-family: "Public Sans", sans-serif;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 755px) {
+  .middle-cont .card-row .text-col p {
+    padding-right: 23%;
+  }
+}
+
+.middle-cont .card-row .img-col {
+  justify-content: center;
+  text-align: center !important;
+}
+
+.middle-cont .card-row .img-col img {
+  width: 100%;
+}
