--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -215,7 +215,7 @@ body {
 
 @media screen and (min-width: 755px) {
   .top-home-cont .text-col input {
-    width: 120% !important;
+    width: 150% !important;
   }
 }
 
@@ -410,4 +410,65 @@ body {
   font-family: "Public Sans", sans-serif;
   color: #6c8294;
   margin-bottom: 45px;
+}
+
+.cta-cont {
+  padding: 5% 10%;
+}
+
+@media screen and (max-width: 756px) {
+  .cta-cont {
+    text-align: center;
+  }
+}
+
+.cta-cont .text-col h2 {
+  font-size: 48px;
+  color: #1b262f;
+  font-family: "Public Sans", sans-serif;
+  margin-bottom: 25px;
+}
+
+.cta-cont .input-col input {
+  box-shadow: 15px 15px 18px 5px rgba(0, 0, 0, 0.1);
+  height: 50px;
+  width: 80%;
+  border-radius: 25px;
+  border: 1px solid #fbfcfe;
+  padding-left: 20px;
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 755px) {
+  .cta-cont .input-col input {
+    width: 120% !important;
+  }
+}
+
+.cta-cont .input-col input::placeholder {
+  color: #6c8294;
+}
+
+.cta-cont .input-col .pink-btn {
+  height: 50px;
+  width: 80%;
+  box-shadow: 5px 10px 12px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 25px;
+  cursor: pointer;
+  border: 1px solid #ba4270;
+  background-color: #ba4270;
+  color: #fbfcfe;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 755px) {
+  .cta-cont .input-col .pink-btn {
+    width: 150px;
+  }
+}
+
+.cta-cont .input-col .pink-btn:hover {
+  transition: all 0.2s ease-out;
+  border-color: #da6d97;
+  background-color: #da6d97;
 }
