--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -546,3 +546,24 @@ body {
   color: #1b262f;
   padding-right: 25%;
 }
+
+.principles-cont {
+  padding: 2% 17% 1%;
+}
+
+.principles-cont h4 {
+  margin-top: 10px;
+  font-size: 25px;
+  font-family: "Public Sans", sans-serif;
+  color: #1b262f;
+  font-weight: 300;
+}
+
+.principles-cont p {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 1.5rem;
+  font-family: "Public Sans", sans-serif;
+  color: #6c8294;
+  margin-bottom: 45px;
+}
