--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -512,3 +512,32 @@
             margin-bottom: 45px;
         }
     }
+    
+    //---------------Statistics component-----------------
+    .statistics-cont {
+        img {
+            width: 100%;
+        }
+        .statistics-row {
+            padding: 5% 5%;
+            hr {
+                border: none;
+                border: 1px solid lightgray;
+                width: 95%;
+            }
+            h3 {
+                margin-top: 15px;
+                font-size: 15px;
+                font-weight: $light;
+                color: $san-juan-blue;
+                font-family: $public-sans;
+            }
+            h1 {
+                padding: 10px 0;
+                font-size: 45px;
+                color: $charm-pink;
+                font-weight: $light;
+                font-family: $public-sans;
+            }
+        }
+    }
